--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^7.2.16",
     "@angular/platform-browser-dynamic": "^7.2.16",
     "@angular/router": "^7.2.16",
+    "@capacitor/android": "^2.1.2",
+    "@capacitor/core": "2.1.2",
     "@ionic-native/core": "^5.24.0",
     "@ionic-native/splash-screen": "^5.24.0",
     "@ionic-native/status-bar": "^5.24.0",
@@ -47,6 +49,7 @@
     "@angular/compiler": "^7.2.16",
     "@angular/compiler-cli": "^7.2.16",
     "@angular/language-service": "^7.2.16",
+    "@capacitor/cli": "2.1.2",
     "@ionic/angular-toolkit": "~1.5.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
