--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@angular/router": "^7.2.16",
     "@capacitor/android": "^2.1.2",
     "@capacitor/core": "2.1.2",
+    "@ionic-native/camera": "^5.34.0",
     "@ionic-native/core": "^5.24.0",
+    "@ionic-native/file": "^5.34.0",
     "@ionic-native/splash-screen": "^5.24.0",
     "@ionic-native/status-bar": "^5.33.0",
     "@ionic/angular": "^4.11.10",
     "chart.js": "^2.9.3",
     "cordova-android": "7.1.4",
+    "cordova-plugin-camera": "^5.0.2",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.0",
@@ -56,6 +59,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.0.12",
     "codelyzer": "~4.5.0",
+    "cordova-plugin-file": "^6.0.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -78,7 +82,9 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "android"
